--- a/intro.html
+++ b/intro.html
@@ -212,8 +212,8 @@
                         <div class="title">
                             <h1>Gửi Thảo!</h1>
                         </div>
-                        <p>Năm mới, Năm mới chúc cả gia đình mày có sức khỏe, 
-                            hạnh phúc, bình an và may mắn. Chúc mày có một 
+                        <p>Năm mới, Năm mới chúc cả gia đình Thảo có sức khỏe, 
+                            hạnh phúc, bình an và may mắn. Chúc Thảo có một 
                             bầu trời sức khỏe, một biển cả tình thương, 
                             một đại dương tình bạn, một người yêu chung thủy 
                             và một sự nghiệp sáng ngời.
